--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
 
     <meta charset="utf-8">
@@ -12,14 +13,14 @@
     <title>Hack RPI</title>
 
     <!-- Bootstrap Core CSS -->
+    <script src="dist/js/bootstrap-checkbox.min.js" defer></script>
     <link href="/static/bootstrap.min.css" rel="stylesheet">
     <link href="/static/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <style>
     #nav {
-      background-color: transparent;
-      background: transparent;
+      background-color: #00001a;
       border: none;
       font-weight: bold;
     }
@@ -53,8 +54,10 @@
     .container form {
       padding-top: 10px;
     }
-    .container form button {
-      background-color: transparent;
+    #summary{
+      background-color: lightgray;
+      border: 3px solid white;
+      padding: 20px;
     }
     </style>
 
@@ -97,135 +100,25 @@
     </nav>
 
 
-
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
-          {% extends "layout.html" %}
-          {% block content %}
-              <form>
-                {{ message }}
-              <form>
-          {% endblock %}
-          </div>  <!--End column-->
-          <div class="col-md-3">
-              <form action='/' method='POST'>
-                  <div class="form-group">
-                      <input type="text" name="" class="form-control">
-                    </div>
-                </form>
-            </div>  <!--End column-->
-            <div class="col-md-3">
-                <form action='/' method='POST'>
-                    <div class="form-group">
-                        <input type="text" name="" class="form-control">
-                      </div>
-                  </form>
-              </div>  <!--End column-->
-              <div class="col-md-3">
-                  <form action='/' method='POST'>
-                      <div class="form-group">
-                          <input type="text" name="" class="form-control">
-                        </div>
-                    </form>
-                </div>  <!--End column-->
-      </div> <!--End row-->
-      <div class="row">
-        <div class="col-md-3">
-            <form action='/' method='POST'>
-                <div class="form-group">
-                    <input type="text" name="" class="form-control">
+
+          {% for i, url in zip(results, urls) %}
+          <div id="summary" class="col-md-8">
+              <form id="form1" action="{{ url_for('result') }}" method="post">
+                  <div class="well">
+                      <span>{{ i }}</span>
+                      <input type="hidden" name="url" value="{{ url }}">
                   </div>
+                  <input id="radio1" type="radio" value="true" name="radios">
+                  <button id="button1" type="submit" class="btn btn-default">Search</button>
               </form>
           </div>  <!--End column-->
-          <div class="col-md-3">
-              <form action='/' method='POST'>
-                  <div class="form-group">
-                      <input type="text" name="" class="form-control">
-                    </div>
-                </form>
-            </div>  <!--End column-->
-            <div class="col-md-3">
-                <form action='/' method='POST'>
-                    <div class="form-group">
-                        <input type="text" name="" class="form-control">
-                      </div>
-                  </form>
-              </div>  <!--End column-->
-              <div class="col-md-3">
-                  <form action='/' method='POST'>
-                      <div class="form-group">
-                          <input type="text" name="" class="form-control">
-                        </div>
-                    </form>
-                </div>  <!--End column-->
+          {% endfor %}
       </div> <!--End row-->
-      <div class="row">
-        <div class="col-md-3">
-            <form action='/' method='POST'>
-                <div class="form-group">
-                    <input type="text" name="" class="form-control">
-                  </div>
-              </form>
-          </div>  <!--End column-->
-          <div class="col-md-3">
-              <form action='/' method='POST'>
-                  <div class="form-group">
-                      <input type="text" name="" class="form-control">
-                    </div>
-                </form>
-            </div>  <!--End column-->
-            <div class="col-md-3">
-                <form action='/' method='POST'>
-                    <div class="form-group">
-                        <input type="text" name="" class="form-control">
-                      </div>
-                  </form>
-              </div>  <!--End column-->
-              <div class="col-md-3">
-                  <form action='/' method='POST'>
-                      <div class="form-group">
-                          <input type="text" name="" class="form-control">
-                        </div>
-                    </form>
-                </div>  <!--End column-->
-      </div> <!--End row-->
-      <div class="row">
-        <div class="col-md-3">
-            <form action='/' method='POST'>
-                <div class="form-group">
-                    <input type="text" name="" class="form-control">
-                  </div>
-              </form>
-          </div>  <!--End column-->
-          <div class="col-md-3">
-              <form action='/' method='POST'>
-                  <div class="form-group">
-                      <input type="text" name="" class="form-control">
-                    </div>
-                </form>
-            </div>  <!--End column-->
-            <div class="col-md-3">
-                <form action='/' method='POST'>
-                    <div class="form-group">
-                        <input type="text" name="" class="form-control">
-                      </div>
-                  </form>
-              </div>  <!--End column-->
-              <div class="col-md-3">
-                  <form action='/' method='POST'>
-                      <div class="form-group">
-                          <input type="text" name="" class="form-control">
-                        </div>
-                    </form>
-                </div>  <!--End column-->
-      </div> <!--End row-->
+
     </div><!-- /.container -->
     <!-- END SEARCH FORM -------->
-
-
-
-
     <!-- jQuery Version 1.11.1 -->
     <script src="/static/js/jquery.js"></script>
 
