--- a/templates/index.html
+++ b/templates/index.html
@@ -40,8 +40,8 @@
     }
     body {
         padding-top: 70px;
-        /*background-image: url("/static/back.jpg");*/
-        background-color: #00001a;
+        background-image: url("/static/back.jpg");
+        /*background-color: #00001a;*/
         background-repeat: no-repeat;
         width: 100%;
         height: 100%;
