--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -42,21 +42,22 @@
     body {
         padding-top: 70px;
         /*background-image: url("/static/back.jpg");*/
-        background-color: #e6e6e6;
+        background-color: #e9f0f5;
         background-repeat: no-repeat;
         width: 100%;
         height: 100%;
       }
     .container form input {
       height: 140px;
-      background-color: #9fdfbf;
+      background-color: skyblue;
     }
     .container form {
       padding-top: 10px;
+      border-radius: 8px;
     }
     #summary{
-      background-color: lightgray;
-      border: 3px solid white;
+      background-color: #dcdcdc;
+      border: 4px solid #e9f0f5;
       padding: 20px;
     }
     </style>
